# adap2e

./: .gitlab-ci.yml  AUTHORS  README.md  adap2e.repos  adap2e.repos.public  adap2e_public.repos
adap2e/: CMakeLists.txt  package.xml
adap2e_bringup/: CMakeLists.txt  README.md  package.xml
adap2e_bringup/config/: controller_manager.yaml  mobile_base_controller.yaml  mobile_base_controller_fat.yaml
adap2e_bringup/launch/: adap2e.launch.py  adap2e_base.launch.py  adap2e_fat.launch.py  adap2e_gazebo.launch.py  adap2e_live.launch.py  adap2e_slim.launch.py  adap2e_teleop.launch.py  adap2e_test.launch.py  adpa2e_gazebo.launch.py
adap2e_bringup/python/: adap2e_bringup.py
adap2e_bringup/scripts/: urdf_description.py
adap2e_bringup/test/: test_urdf_description.py
adap2e_description/: CMakeLists.txt  README.md  package.xml
adap2e_description/config/: adap2e_fat.yaml  adap2e_fat_chassis.yaml  adap2e_fat_kinematic.yaml  adap2e_fat_odometry.yaml  adap2e_joints.yaml  adap2e_links.yaml  adap2e_one.yaml  adap2e_slim.yaml  adap2e_slim_chassis.yaml  adap2e_slim_kinematic.yaml  adap2e_two.yaml  gazebo_ros_control.yaml
adap2e_description/launch/: fat_display.launch  slim_display.launch  view_adap2e_fat.launch.py  view_adap2e_fat.launch.xml  view_adap2e_slim.launch.py  view_adap2e_slim.launch.xml
adap2e_description/meshes/: HOW_TO_BLENDER  framev3_03.dae  framev3_04.dae  framev3_05.dae  wheel_02.dae  wheel_02b.dae
adap2e_description/python/: adap2e_description.py
adap2e_hardware/: CMakeLists.txt  README.md  adap2e_hardware.xml  package.xml
(+19 files in other folders)
